fixed mobile indesirable white space

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,8 +10,13 @@
 	--theme-bg: #212529;
 	--border-c: rgba(255,255,255,0.11);
 }
-body{
+html,body {
 	font-family: 'Public Sans', sans-serif;
+	width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
 .container{
 	max-width: 1260px;
